_includes/css/sfbrigade.css
/* ... */
h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
font-family: "Oswald","Helvetica Neue","Verdana", sans-serif;
}

p {
  line-height: 1.8;
  margin-bottom: 1.1em;
}

li {
  line-height: 1.8;
}

table h1 {
  margin-top:0px;
}

table h3 {
  margin-top: 5px;
}

#main {
  margin-top: 1.1em;
}

.article-content {
  margin-top: 20px;
}

#signup {
  margin: 25px;
}

/* CUSTOMIZE THE NAVBAR
-------------------------------------------------- */

/* Special class on .container surrounding .navbar, used for positioning it into place. */
.navbar-wrapper {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  z-index: 20;
}

.featured-nav-link {
  background: #E2768D;
}

.navbar-default .navbar-nav>li.featured-nav-link>a {
  color: #fff;
  border-left: #cfcfcf 2px solid;
  border-right: #cfcfcf 2px solid;
}

/* Flip around the padding for proper display in narrow viewports */
.navbar-wrapper .container {
  padding-right: 0;
  padding-left: 0;
}
.navbar-wrapper .navbar {
  padding-right: 15px;
  padding-left: 15px;
}

/* MOBILE ALERT */
.alert.visible-xs .glyphicon {
  margin-right:10px;
}

/* CUSTOMIZE THE CAROUSEL
-------------------------------------------------- */

/* Carousel base class */
.carousel {
  height: 425px;
  background-image: url({{site.baseurl}}/images/goldengate-top.jpg);
  background-size: cover;
  background-position: center bottom;
  margin-bottom: 60px;
  color: #fff;
}
/* Since positioning the image, we need to help out the caption */
.carousel-caption {
  z-index: 10;
}

/* Declare heights because of positioning of img element */

.carousel-inner {
  /*
  Address issue #37: https://github.com/sfbrigade/sfbrigade.github.io/issues/37

  We need to set overflow-y to allow scrolling because bootstrap.css
  sets it to hidden, which cuts off the carousel's contents in small screens.
  (Setting to auto will allow scrolling when needed, but won't show a
  scrollbar when not needed.)  See also this comment for the reason Bootstrap used hidden:
  https://github.com/twbs/bootstrap/issues/6091#issuecomment-10923509
  */
  overflow-y: auto;
}
.carousel-inner > .item > img {
  position: absolute;
  top: 0;
  left: 0;
  min-width: 100%;
}



/* MARKETING CONTENT
-------------------------------------------------- */

/* Pad the edges of the mobile views a bit */
.marketing {
  padding-right: 15px;
  padding-left: 15px;
}

/* Center align the text within the three columns below the carousel */
.marketing .col-lg-4 {
  margin-bottom: 20px;
  text-align: center;
}
.marketing h2 {
  font-weight: normal;
}
.marketing .col-lg-4 p {
  margin-right: 10px;
  margin-left: 10px;
}

.jumbotron {
  margin-top: 20px;
  background: rgba(0,0,0,0.44)
}

.jumbotron .row {
  margin-top: 10px;
}


/* Featurettes
------------------------- */

.featurette-divider {
  margin: 80px 0; /* Space out the Bootstrap <hr> more */
}

/* Thin out the marketing headings */
.featurette-heading {
  font-weight: 300;
  line-height: 1;
  letter-spacing: -1px;
}


/* RESPONSIVE CSS
-------------------------------------------------- */

@media (min-width: 768px) {

  /* Remove the edge padding needed for mobile */
  .marketing {
    padding-right: 0;
    padding-left: 0;
  }

  /* Navbar positioning foo */
  .navbar-wrapper {
    margin-top: 20px;
  }
  .navbar-wrapper .container {
    padding-right: 15px;
    padding-left:  15px;
  }
  .navbar-wrapper .navbar {
    padding-right: 0;
    padding-left:  0;
  }

  /* The navbar becomes detached from the top, so we round the corners */
  .navbar-wrapper .navbar {
    border-radius: 4px;
  }

  /* Bump up size of carousel content */
  .carousel-caption p {
    margin-bottom: 20px;
    font-size: 21px;
    line-height: 1.4;
  }

  .featurette-heading {
    font-size: 50px;
  }
}

@media (min-width: 992px) {
  .featurette-heading {
    margin-top: 120px;
  }
}

.video-container {
  position: relative;
  padding-bottom: 56.25%;
  padding-top: 30px; height: 0; overflow: hidden;
  margin-bottom: 20px;
}

.video-container iframe,
.video-container object,
.video-container embed {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.contributors img {
  width: 50px;
}

.contributor-owner img {
  border: 1px solid #428bca;
}

.people td {
  font-size: 20px;
}

.people img {
  width: 50px;
}

.sponsors img {
  padding: 10px 30px 10px 0;
}

.label:hover { text-decoration: none; }

/* Everything but the jumbotron gets side spacing for mobile first views */
.header,
.marketing,
.footer {
  padding-left: 15px;
  padding-right: 15px;
}

/* Custom page header */
.header {
  border-bottom: 1px solid #e5e5e5;
}
/* Make the masthead heading the same height as the navigation */
.header h3 {
  margin-top: 0;
  margin-bottom: 0;
  line-height: 40px;
  padding-bottom: 19px;
}

/* Custom page footer */
.footer {
  margin-top:10px;
  padding-top: 19px;
  color: #777;
}

/* Customize container */
.container-narrow > hr {
  margin: 30px 0;
}

/* Main marketing message and sign up button */
.jumbotron {
  text-align: center;
  border-bottom: 1px solid #e5e5e5;
}
.jumbotron .btn {
  font-size: 21px;
  padding: 14px 24px;
}

/* Supporting marketing content */
.marketing {
  margin: 40px 0;
}
.marketing p + h4 {
  margin-top: 28px;
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
  /* Remove the padding we set earlier */
  .header,
  .marketing,
  .footer {
    padding-left: 0;
    padding-right: 0;
  }
  /* Space out the masthead */
  .header {
    margin-bottom: 30px;
  }
  /* Remove the bottom border on the jumbotron for visual effect */
  .jumbotron {
    border-bottom: 0;
  }
}

.nowrap { white-space:nowrap; }

#recent-event { margin: 10px 0 0 0; }

.api-title { width: 30%; }

.thumbnail {margin-bottom: 5px;}

/* Bars */
.bar {
  position: relative;
  width: 4px;
  height: 50px;
  margin: 10px 1px 0 1px;
  float: left;
}
/* ... */

